name:                links-saver
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://axt
license:             GPL-2
license-file:        LICENSE
author:              RuZzz
maintainer:          xruz@inbox.ru
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                    Database,
                    Database.Tables,
                    Database.Types,
                    Database.Queries,
                    Options,
                    Types,
                    URL.Common,
                    URL.Parse
  build-depends:
                    base >= 4.7 && < 5,
                    base-unicode-symbols,
                    bytestring,
                    directory,
                    opaleye,
                    lens,
                    parsec,
                    postgresql-simple,
                    product-profunctors,
                    network-uri,
                    regex-pcre,
                    split,
                    text
  default-language:    Haskell2010

executable links-saver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        
                        GLUT,
                        OpenGL,
                        ax-configs,
                        ax-options,
                        base,
                        base-unicode-symbols,
                        bytestring,
                        directory,
                        either,
                        links-saver,
                        mtl,
                        opaleye,
                        postgresql-simple,
                        regex-pcre,
                        time,
                        transformers,
                        yaml
  default-language:    Haskell2010

test-suite links-saver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , links-saver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
